# Test-Infotecs-project

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: journal_lib.cpp  journal_lib.h
test/: logs.txt  logs1.txt  logs2.txt  logs8.txt
